fix: secrets service
