# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Platform for managing application secrets and environment variables.",
+        "description": "Platform for managing application secrets and keys.",
         "title": "Evrika Secrets API",
         "contact": {},
         "license": {
@@ -10,7 +10,7 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8888",
+    "host": "10.10.1.59:44044",
     "basePath": "/api/v1",
     "paths": {
         "/api/v1/login": {
@@ -140,6 +140,58 @@
             }
         },
         "/api/v1/secrets": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Получить список всех секретов",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "secrets"
+                ],
+                "summary": "Список секретов/ключей",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "список секретов по типу",
+                        "name": "type",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "список секретов от пользователя",
+                        "name": "user",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/secrets.SecretSwaggerJson"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/resp.Err"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/resp.Err"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -190,14 +242,14 @@
                 }
             }
         },
-        "/api/v1/secrets/:user_id": {
+        "/api/v1/secrets/:secret_id": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Получить список всех секретов",
+                "description": "Получить ключ по id",
                 "consumes": [
                     "application/json"
                 ],
@@ -207,12 +259,12 @@
                 "tags": [
                     "secrets"
                 ],
-                "summary": "Список секретов/ключей",
+                "summary": "Объект ключа",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "ID пользователя",
-                        "name": "user_id",
+                        "description": "ID ключа",
+                        "name": "secret_id",
                         "in": "path",
                         "required": true
                     }
@@ -221,7 +273,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/secrets.SecretSwaggerJson"
+                            "$ref": "#/definitions/secrets.SecretSwaggerJsonObj"
                         }
                     },
                     "400": {
@@ -501,6 +553,15 @@
                     "type": "string",
                     "example": "адрес базы данных"
                 },
+                "type": {
+                    "type": "string",
+                    "enum": [
+                        "auth",
+                        "ssh",
+                        "env"
+                    ],
+                    "example": "env"
+                },
                 "updated_at": {
                     "type": "string",
                     "example": "2023-11-20T11:15:37Z"
@@ -534,6 +595,14 @@
                 }
             }
         },
+        "secrets.SecretSwaggerJsonObj": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/secrets.SecretSwaggerData"
+                }
+            }
+        },
         "secrets.SecretSwaggerReq": {
             "type": "object",
             "required": [
@@ -558,6 +627,10 @@
                 "title": {
                     "type": "string",
                     "example": "адрес базы данных"
+                },
+                "type": {
+                    "type": "string",
+                    "example": "env"
                 }
             }
         },
